feat: add info swiper & responsive system in HomePage

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,8 +10,9 @@
 	--color-light-gray: #f6f6f6;
 	--text-sm: 14px;
 	--text-md: 16px;
-	--text-lg: 20px;
+	--text-lg: 18px;
 	--text-xl: 24px;
+	--text-xxl: 30px;
 	--font-title: Shrikhand, "sans-serif";
 	--font-main: Sniglet, "sans-serif";
 }
